--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -28,20 +28,30 @@
 								<input id="password" type="password" name="password" size="35" placeholder="Password" class="mb-3"> 
 							</td>
 						</tr>
-						<tr>
-							<td>
-								<a href="#" id="login" class="btn btn-info  btn-block mb-3">Login With Email</a>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<a href="index1.html"   class="btn btn-secondary  btn-block ">
-                                    <fa name="facebook" class="pr-1" style="color:black;"></fa>
-									
-									Login with Facebook
-								</a>
-							</td>
-						</tr>
+                        <tr>
+                            <td>
+                                <input type="submit" value="Login With Email" id="login" class="btn btn-info  btn-block mb-3" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="submit" id="logout" value="Logout With Email" class="btn btn-info  btn-block mb-3" hidden />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="submit" value="Signup With Email" id="signup" class="btn btn-info  btn-block mb-3" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                            <a href="index1.html" class="btn btn-secondary  btn-block ">
+                                <fa name="facebook" class="pr-1" style="color:black;"></fa>
+
+                                Login with Facebook
+                            </a>
+                            </td>
+                        </tr>
 						<tr>
 							<td>
 								<a href="index2.html" class="btn btn-secondary  btn-block ">
